// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Read-model generic adapter API Delete and non-parametrized resolver invocation 1`] = `
Object {
  "countResult": 2,
  "findOneResult": Object {
    "firstJsonName": Object {
      "a": 1,
      "b": 2,
      "e": 10,
    },
  },
  "findResult": Array [],
}
`;

exports[`Read-model generic adapter API Insert and non-parametrized resolver invocation 1`] = `
Object {
  "countResult": 4,
  "findOneResult": Object {
    "firstJsonName": Object {
      "a": 1,
      "b": 2,
      "e": 10,
    },
  },
  "findResult": Array [],
}
`;

exports[`Read-model generic adapter API Update and non-parametrized resolver invocation 1`] = `
Object {
  "countResult": 4,
  "findOneResult": Object {
    "firstJsonName": Object {
      "a": 1,
      "b": 2,
      "e": 10,
    },
  },
  "findResult": Array [],
}
`;

exports[`Read-model generic adapter API Update and parametrized resolver invocation 1`] = `
Array [
  Object {
    "firstJsonName": Object {
      "c": 3,
      "e": 25,
      "f": "inner-field",
    },
  },
  Object {
    "firstJsonName": null,
  },
]
`;

exports[`Read-model generic adapter API Upsert and non-parametrized resolver invocation 1`] = `
Object {
  "countResult": 4,
  "findOneResult": Object {
    "firstJsonName": Object {
      "a": 1,
      "b": 2,
      "e": 10,
    },
  },
  "findResult": Array [],
}
`;
